Minor CSS fix; cannot use App on small devices.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -210,7 +210,7 @@ p {
 
 .iphone-screenshot {
 	position: relative;
-	z-index: 100;
+	z-index: 999;
 	overflow: hidden;
 	width: 87.5%;
 	height: 0;
